--- a/app/src/components/dialog/VaultKeyDialog.css
+++ b/app/src/components/dialog/VaultKeyDialog.css
@@ -1,9 +1,4 @@
 ion-modal#vault-key-modal {
+    --width: min(22rem, 85vw);
     --height: 55%;
-    --width: min(350px, 85vw);
-}
-
-ion-modal#vault-key-modal::part(backdrop) {
-    background: rgba(0, 0, 0);
-    opacity: 1;
 }
